--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "mockservice",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A股股票模拟交易服务，可部署在Vercel",
+  "main": "api/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node api/index.js",
+    "start": "node api/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "uuid": "^9.0.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
