--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "A股股票模拟交易服务，可部署在Vercel",
   "main": "api/index.js",
   "scripts": {
-    "dev": "node api/index.js",
     "start": "node api/index.js",
-    "init:db": "node db/init.js"
+    "dev": "nodemon api/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "better-sqlite3": "^9.6.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "sqlite3": "^5.1.7",
-    "uuid": "^9.0.0"
+    "express": "^4.18.2",
+    "sql.js": "^1.10.3",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
